[tool.poetry]
name = "tgame_engine"
version = "0.1.0"
description = ""
authors = ["vcslav-v <vcslav.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
gunicorn = "^20.0.4"
uvicorn = "^0.12.1"
uvloop = "^0.14.0"
httptools = "^0.1.1"
pyTelegramBotAPI = "^3.7.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
