[tool.poetry]
name = "tgame_engine"
version = "0.1.0"
description = ""
authors = ["vcslav-v <vcslav.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
pyTelegramBotAPI = "^3.7.3"
flask = "^1.1.2"

[tool.poetry.scripts]
set-webhooks = "app.set_webhook:main"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
